# server/internal/model/rssfeed.go
@@ -13,6 +13,7 @@ type RssArticle struct {
 	Link        string     `gorm:"size:1000;not null;unique" json:"link"`
 	PublishedAt *time.Time `json:"published_at"`
 	IsRead      bool       `gorm:"default:false" json:"is_read"`
+	BlockCircle bool       `gorm:"default:false" json:"block_circle"`
 	CreatedAt   time.Time  `json:"created_at"`
 	UpdatedAt   time.Time  `json:"updated_at"`
 }
